# object-tracking-assignment

./: README.md  creare_track.py  fastapi_server.py  hungarian_algorithm.py  hungarian_tracker.py  index.html  kalman_filter.py  metric.py  pyproject.toml  report.md  report_en.md  track_1.py  track_bbskip0_randomrange2_amounts2_no_intersections_between_agents.py  track_bbskip25_randomrange2_amounts10.py  track_bbskip25_randomrange2_amounts20.py  track_bbskip25_randomrange2_amounts2_with_intersaction.py  track_bbskip25_randomrange2_amounts5.py  tracker_strong.py
experiments/: tracks_t10_r0_s0.py  tracks_t10_r2_s25.py  tracks_t10_r5_s50.py  tracks_t20_r0_s0.py  tracks_t20_r2_s25.py  tracks_t20_r5_s50.py  tracks_t5_r0_s0.py  tracks_t5_r2_s25.py  tracks_t5_r5_s50.py
utils/: visualize_tracks.py
utils/assets/: map_amount2_with_kalman_filter.json  map_amount2_without_kalman_filter.json
