[project]
name = "object-tracking"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgenii Iurin",email = "iurin.evgenii@gmail.com"}
]
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "fastapi (==0.110.*)",
    "matplotlib (==3.8.3)",
    "numpy (==1.26.*)",
    "scipy (==1.12.*)",
    "uvicorn[standard] (==0.27.*)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
